// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvailableResourceListingItem /> should render correctly 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className=""
          />
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when resource already added 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className="line-through"
          />
        </div>
        <div
          className="error-text italic text-xs"
        >
          Already added
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          disabled={true}
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when resource has add error 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className=""
          />
        </div>
        <div
          className="error-text text-xs"
        >
          Failed to add topic resource.
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when resource verified 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className=""
          />
          <div
            className="ml-2"
          >
            <div
              className="VerifiedIcon"
              data-testid="VerifiedIcon"
            >
              <svg
                aria-describedby={null}
                aria-hidden={true}
                aria-label="verified"
                className="MuiSvgIcon-root"
                color="#6f99f2"
                focusable="false"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
                title="Verified"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
